# kraftaEditor

./: .gitignore  CMakeLists.txt  KraftaEditor.manifest  README.md  app.hpp  defs.hpp  main.cpp  main.hpp  mainApp.cpp  mainApp.hpp  mainFrame.cpp  mainFrame.hpp  resource.h  resources.rc
assets/languagesPreferences/: languagesPreferences.json
assets/themes/: deep_jade.json  pale_ivory.json  standard_theme.json
components/codeContainer/: code.cpp  code.hpp
components/codeContainer/editor/: editor.cpp  editor.hpp
components/codeContainer/minimap/: minimap.cpp  minimap.hpp
components/filesTree/: files.cpp  files.hpp  navigationButtons.cpp  searchFiles.cpp
components/search/: search.cpp  search.hpp
components/sideNavigation/: side.cpp
components/statusBar/: status.cpp  status.hpp
components/tabs/: tabs.cpp  tabs.hpp
config/foldSettings/: foldSettings.json
config/userSettings/: defaultUserSettings.json
i18n/en_US/LC_MESSAGES/: kraftaeditor.mo
i18n/pt_BR/LC_MESSAGES/: kraftaeditor.mo
include/appConstants/: appConstants.hpp
include/appPaths/: appPaths.hpp
include/convertPathToHash/: convertPathToHash.hpp
include/errorMessages/: errorMessages.hpp
include/fileOperations/: fileOperations.hpp
include/format/: format.hpp
include/languagesPreferences/: languagesPreferences.hpp
include/menus/: dirContextMenu.hpp  fileContextMenu.hpp  tabsContainerMenu.hpp
include/path/: path.hpp
include/platform/: platform.hpp
include/platformInfos/: platformInfos.hpp
include/projectSettings/: projectSettings.hpp
include/shortcutsSettings/: shortcutsSettings.hpp
include/themesManager/: themesManager.hpp
include/ui/: ids.hpp
include/userSettings/: defaultSettings.json  userSettings.hpp
include/workspaceStorageManager/: workspaceStorageManager.hpp
languages/: extensionsList.json
languages/c#/: preferences.json
languages/c++/: preferences.json
languages/c++/styles/: dark.json  light.json
languages/cmake/: preferences.json
languages/cmake/styles/: dark.json  light.json
languages/css/: preferences.json
languages/css/styles/: dark.json  light.json
languages/dart/: preferences.json
languages/dart/styles/: dark.json  light.json
languages/default/: preferences.json
languages/go/: preferences.json
languages/go/styles/: dark.json
languages/html/: preferences.json
languages/html/styles/: dark.json  light.json
languages/java/: preferences.json
languages/javascript/: preferences.json
languages/json/: preferences.json
languages/json/styles/: dark.json  light.json
languages/jsx/: preferences.json
languages/kotlin/: preferences.json
languages/markdown/: preferences.json
languages/markdown/styles/: dark.json  light.json
languages/php/: preferences.json
languages/php/styles/: dark.json  light.json
languages/python/: preferences.json
languages/python/styles/: dark.json  light.json
languages/r/: preferences.json
languages/r/styles/: dark.json  light.json
languages/ruby/: preferences.json
languages/ruby/styles/: dark.json  light.json
languages/rust/: preferences.json
languages/rust/styles/: dark.json  light.json
languages/scala/: preferences.json
languages/swift/: preferences.json
languages/txt/: preferences.json
languages/txt/styles/: dark.json  light.json
languages/typescript/: preferences.json
languages/typescript/styles/: light.json
members/: controlPanel.cpp  emptyWindow.cpp  find.cpp  imagePanel.cpp  menuBar.cpp  openFolderButton.cpp  openFolderLink.cpp  terminal.cpp
resources/: app.manifest  app.rc  krafta-editor.desktop
scripts/: install.sh  kraftaEditor.iss  uninstall.sh  update_translations.sh
scripts/locale/: en_US.mo  messages.pot  pt_BR.mo  pt_BR.po  pt_BR.po~
src/: themes.json
src/FrameFileDropTarget/: FrameFileDropTarget.cpp
src/app/application/: application.cpp  application.hpp
src/app/frames/: mainFrame.cpp  mainFrame.hpp  mainFrameEventTable.cpp
src/core/languages/: prefs.cpp  prefs.hpp
src/core/languages/languages/: CMAKE.cpp  CPP.cpp  JAVASCRIPT.cpp  JSON.cpp  PLAINTEXT.cpp  UNKNOWN.cpp  html.cpp
src/core/languagesPreferences/: languages.cpp  languagesPreferences.cpp
src/core/lexerStyles/: lexerStyle.cpp  lexerStyle.hpp
src/core/projectSettings/: projectSettings.cpp
src/core/shortcutsSettings/: shortcutsSettings.cpp
src/core/themesManager/: themesManager.cpp
src/core/userSettings/: userSettings.cpp
src/core/workspaceStorageManager/: workspaceStorageManager.cpp
src/eventFilters/: eventFilters.hpp
src/frameFileDropTarget/: frameFileDropTarget.cpp  frameFileDropTarget.hpp
src/gui/codeContainer/: code.cpp  code.hpp
src/gui/codeContainer/codeSearch/: codeSearch.cpp  codeSearch.hpp
src/gui/codeContainer/editor/: editor.cpp  editor.hpp  editorEventsTable.cpp
src/gui/codeContainer/minimap/: minimap.cpp  minimap.hpp
src/gui/menus/: dirContextMenu.cpp  fileContextMenu.cpp  tabsContainerMenu.cpp
src/gui/panels/controlPanel/: controlPanel.cpp  controlPanel.hpp  controlPanelEventTable.cpp
src/gui/panels/filesTree/: filesTree.cpp  filesTree.hpp  filesTreeEventTable.cpp
src/gui/panels/quickOpen/: quickOpen.cpp  quickOpen.hpp  quickOpenEventTable.cpp
src/gui/panels/searchPage/: searchPage.cpp  searchPage.hpp
src/gui/panels/tabs/: tabs.cpp  tabs.hpp
src/gui/panels/terminal/: terminal.cpp  terminal.hpp
src/gui/widgets/confirmDialog/: confirmDialog.cpp  confirmDialog.hpp
src/gui/widgets/emptyWindow/: emptyWindow.cpp  emptyWindow.hpp
src/gui/widgets/imagePanel/: imagePanel.cpp  imagePanel.hpp
src/gui/widgets/menuBar/: menuBar.cpp  menuBar.hpp
src/gui/widgets/notifyPanel/: notifyPanel.cpp  notifyPanel.hpp
src/languagePrefs/: prefs.cpp  prefs.hpp
src/languagePrefs/languages/: BINARY.cpp  CMAKE.cpp  CPP.cpp  JAVASCRIPT.cpp  JSON.cpp  PLAINTEXT.cpp  UNKNOWN.cpp  html.cpp
src/lexerStyle/: lexerStyle.cpp
src/userConfig/: userConfig.cpp  userConfig.hpp
src/utils/appPaths/: appPaths.cpp
src/utils/fileOparations/: fileOperations.cpp
utils/: createAssetsDir.hpp  fileManager.hpp  randoms.hpp
(+10 files in other folders)
